--- a/_config.yml
+++ b/_config.yml
@@ -3,26 +3,8 @@ title: Portafolio de Proyectos
 author: Fernando Cuevas
 email: luisfernandocuevas@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  En esta página me gustaría tener:
-    · Mi Curriculum Vitae
-    · Una Pestaña de Formula SAE
-      ~ Business Presentation de UNAM Motorsports
-    · Una Pestaña de Ingeniería de Diseño
-      ~ Diseño CAD de reciclador de residuos
-      ~ Diseño CAD/CAE de DRON
-    · Una pestaña de Sustentabilidad
-      ~ Proyecto de Brazil
-      ~ Proyecto de Morelos
-      ~ Proyecto de Páneles Solares
-      ~ Proyecto de Exportación
-    · Una pestaña de Ciencia de Datos
-    · Una pestaña de Certificados
-    · Una pestaña de Vida Personal
-      ~ Libros leidos
-      ~ Maratones
-      ~ Proyectos de Edición
-      ~ About me
-    
+Ingeniería Mecatrónica
+Facultad de Ingeniería, UNAM
 
 # social links
 twitter_username: Fer_Cuevas27 # DO NOT include the @ character, or else the build will fail!
